Fix CSS setup and browser console errors
- Configure Tailwind CSS properly with PostCSS
- Add tailwind.config.js with Untitled UI design tokens
- Fix React lazy loading error by importing directly
- Add manifest.json to resolve 404 errors
- Create public directory structure
- Update global.css to use Tailwind directives

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="upVoice - Anonymous real-time discussion platform for meaningful team conversations" />
     
     <!-- PWA Meta Tags -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="apple-touch-icon" href="/images/icons/icon-192x192.png" />
     
     <!-- Fonts -->
